@@ -67,10 +67,6 @@ static GOptionEntry entries[] = {
 	{ NULL, NULL, 0, G_OPTION_ARG_NONE, NULL, NULL, NULL }
 };
 
-static char pkgver[] = PACKAGE_VERSION;
-extern "C" char pkgver_in_libpcmanx[];	/* exported from libpcmanx,
-					   used for insanity checks */
-
 /**
  * @mainpage PCManX GTK+ Documentation
  *
@@ -153,35 +149,6 @@ int main(int argc, char *argv[])
 #endif	/* USE_DEBUG */
 		}
 #endif	/* USE_DOCKLET */
-	}
-
-	/*--- Insanity checks for libpcmanx. ---*/
-	if (strcmp(pkgver_in_libpcmanx, pkgver) != 0) {
-		GtkWidget *w = gtk_window_new(GTK_WINDOW_TOPLEVEL);
-		GtkWidget *dialog, *label, *content_area;
-		/* Create the widgets */
-		dialog = gtk_dialog_new_with_buttons (
-				"PCManX Version " PACKAGE_VERSION,
-				GTK_WINDOW(w),
-				GTK_DIALOG_DESTROY_WITH_PARENT,
-				GTK_STOCK_OK,
-				GTK_RESPONSE_NONE,
-				NULL);
-		content_area = gtk_dialog_get_content_area (GTK_DIALOG (dialog));
-		label = gtk_label_new (
-			_("Version mismatch between pcmanx and libpcmanx-core.\n\n"
-			  "Please check your installation."));
-		/* Ensure that the dialog box is destroyed when the user responds. */
-		g_signal_connect_swapped (dialog,
-				"response",
-				G_CALLBACK (gtk_main_quit),
-				dialog);
-		/* Add the label, and show everything we've added to the dialog. */
-		gtk_container_add (GTK_CONTAINER (content_area), label);
-		gtk_widget_show_all (dialog);
-
-		gtk_main();
-		return -1;
 	}
 
 	AppConfig.SetToDefault();
